--- a/web/profiles/custom/drupalorange_profile/config/install/block.block.footer_navigation.yml
+++ b/web/profiles/custom/drupalorange_profile/config/install/block.block.footer_navigation.yml
@@ -6,10 +6,10 @@ dependencies:
   module:
     - menu_block
   theme:
-    - orange_starter
+    - commerce_2_demo
 _core:
 id: footer_navigation
-theme: orange_starter
+theme: commerce_2_demo
 region: footer_nav
 weight: -4
 provider: null
