--- a/web/profiles/custom/drupalorange_profile/config/install/block.block.main_mobile_navigation.yml
+++ b/web/profiles/custom/drupalorange_profile/config/install/block.block.main_mobile_navigation.yml
@@ -6,10 +6,10 @@ dependencies:
   module:
     - menu_block
   theme:
-    - orange_starter
+    - commerce_2_demo
 _core:
 id: main_mobile_navigation
-theme: orange_starter
+theme: commerce_2_demo
 region: mobile_nav
 weight: -6
 provider: null
