--- a/web/profiles/custom/drupalorange_profile/config/install/block.block.pagetitle.yml
+++ b/web/profiles/custom/drupalorange_profile/config/install/block.block.pagetitle.yml
@@ -2,10 +2,10 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - orange_starter
+    - commerce_2_demo
 _core:
 id: pagetitle
-theme: orange_starter
+theme: commerce_2_demo
 region: content
 weight: -1
 provider: null
