Helper task and documentation for UH developers

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ web/sites/default/settings.local.php
 # Ignore web/vender folder if composer accidentally run within web
 /web/vendor/
 node_modules
+
+# Ignore config repository
+urban-hipster-config
