--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,6 +103,7 @@ base-demo-to-uat:
     - echo "$UAT_FINGERPRINT" >> ~/.ssh/known_hosts
 
     #move updated files up to deployment server, exclude .git since it's not needed
+    - git clone git@git.acromedia.com:teams/marketing/urban-hipster/urban-hipster-config.git && mv urban-hipster-config dumps
     - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ commerce-2-demo@aws1.acrobuild.com:/home/commerce-2-demo/www/commerce-2-demo/
 
     # log into the site, reset settings.php permissions and run scripts.
@@ -141,6 +142,7 @@ plus-demo-to-uat:
     - echo "$UAT_FINGERPRINT" >> ~/.ssh/known_hosts
 
     #move updated files up to deployment server, exclude .git since it's not needed.
+    - git clone git@git.acromedia.com:teams/marketing/urban-hipster/urban-hipster-config.git && mv urban-hipster-config dumps
     - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ commerce-2-demo@aws1.acrobuild.com:/home/commerce-2-demo/www/commerceplus/
 
     # log into the site, reset settings.php permissions and run scripts.
@@ -181,6 +183,7 @@ base-demo-to-live:
     - echo "$PRODUCTION_FINGERPRINT_CLOUD4" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
+    - git clone git@git.acromedia.com:teams/marketing/urban-hipster/urban-hipster-config.git && mv urban-hipster-config dumps
     - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demo/
 
     # log into the site, reset settings.php permissions and run scripts.
@@ -219,6 +222,7 @@ plus-demo-to-live:
     - echo "$PRODUCTION_FINGERPRINT_CLOUD4" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
+    - git clone git@git.acromedia.com:teams/marketing/urban-hipster/urban-hipster-config.git && mv urban-hipster-config dumps
     - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demoplus/
 
     # log into the site, reset settings.php permissions and run scripts.
@@ -257,6 +261,7 @@ plus-demo-to-live-AWS:
     - echo "$PRODUCTION_FINGERPRINT_AWS" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
+    - git clone git@git.acromedia.com:teams/marketing/urban-hipster/urban-hipster-config.git && mv urban-hipster-config dumps
     - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acro@commerceplus-new.acromedia.com:/home/acro/www/cpback/
 
     # log into the site, reset settings.php permissions and run scripts.
