--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "drupal/image_effects": "^2.1",
         "drupal/imce": "^1",
         "drupal/jsonapi_extras": "^3.6",
+        "drupal/jsonapi_menu_items": "^1.2",
         "drupal/magnific_popup": "^1.3",
         "drupal/mautic": "^1.1",
         "drupal/menu_block": "^1.6",
@@ -166,10 +167,6 @@
             }
         },
         "patches": {
-            "drupal/commerce_pado": {
-                "#2992041: Group add on items under generic variable":
-                "https://www.drupal.org/files/issues/2018-08-29/group_add_on_items_under_generic_variable-2992041-8.patch"
-            },
             "drupal/commerce_pos": {
                 "Custom styling POS product searching":
                 "patches/commerce_pos-custom-styling_uh.patch"
